--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "exTextCloud",
   "version": "1.0",
-  "description": "비로그인 텍스트 저장 클라우드",
+  "description": "비로그인 텍스트 임시 저장 클라우드",
   "background" : {
     "service_worker" : "background.js"
   },
